[PATCH] Null pointer dereference with some zip files
No idea what makes that zip file different. I can't upload it unfortunately. Fix attached.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Migration Bot added Component::Input: file system Severity::major Type::patch Version::master git + 1 deleted label
added Component::Input: file system Severity::major Type::patch Version::master git + 1 deleted label
- Migration Bot changed milestone to %2.2.0
changed milestone to %2.2.0
- Author
Added attachment:
Original author: g2p code+stackexchange
- Author
It happens when the zip directory contains non-utf8 entries. convert_xml_special_chars bails, and new_node creates an incomplete node.
Original author: g2p code+stackexchange
- Jean-Baptiste Kempf assigned to @jbk and unassigned @MigrationBot
assigned to @jbk and unassigned @MigrationBot
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf closed
closed
- Author
commit 3c53c131 Author: Gabriel de Perthuis g2p.code@gmail.com Date: Mon Sep 15 12:35:46 2014 +0200
Prevent potential null pointer dereference in zip access Close [#12149](https://code.videolan.org/videolan/vlc/-/issues/12149) Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
Original author: g2p.code@gmail.com
- Author
Thanks.
Original author: g2p code+stackexchange
- Owner
backported.
- Jean-Baptiste Kempf mentioned in issue #13815 (closed)
mentioned in issue #13815 (closed)