Prevent potential null pointer dereference in zip access

Close #12149

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>